--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,18 @@ buildscript {
     ext {
         compose_ui_version = '1.2.0'
         room_version = '2.5.0'
+        lifecycle = '2.5.1'
+        hilt_version = '2.44'
     }
+    repositories {
+        google()  // Google's Maven repository
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.15'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+    }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.0' apply false
