--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation("androidx.compose.foundation:foundation:1.3.1")
 
     // Room
     implementation("androidx.room:room-runtime:$room_version")
